<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Contact_Activity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/Number"
        android:inputType="text|number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/website"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgHappy"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgHappy"
            app:srcCompat="@drawable/happy_face" />

        <ImageView
            android:id="@+id/imgFair"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgFair"
            app:srcCompat="@drawable/satisfied" />

        <ImageView
            android:id="@+id/imgSad"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sad"
            android:contentDescription="@string/imgSad" />
    </LinearLayout>

</LinearLayout>