<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/contacts_app"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgFace"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/happy_face"
        android:contentDescription="@string/imgface" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgPhone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/imgPhone"
        android:focusable="true"
        app:srcCompat="@drawable/phone" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/imgWeb"
        app:srcCompat="@drawable/web"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imgMap"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/imgMap"
        app:srcCompat="@drawable/map"
        android:focusable="true" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_new_contact"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>